--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,85 +1,104 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{liu2024link,
+  abbr        = {INFOCOM},
+  bibtex_show = {true},
+  title       = {LinkSelFiE: Link Selection and Fidelity Estimation in Quantum Networks},
+  author      = {Liu, Maoli and Li, Zhuohua and Wang, Xuchuang and Lui, John C.S.},
+  booktitle   = {Proceedings of the IEEE Conference on Computer Communications},
+  year        = {2024}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{wang2023fidelity,
+  selected    = {true},
+  abbr        = {NeurIPS},
+  pdf         = {https://openreview.net/pdf?id=oi45JlpSOT},
+  slides      = {MFMAB-slides.pdf},
+  bibtex_show = {true},
+  title       = {Multi-Fidelity Multi-Armed Bandits Revisited},
+  author      = {Wang, Xuchuang and Wu, Qingyun and Chen, Wei and Lui, John C.S.},
+  booktitle   = {Advances in Neural Information Processing Systems},
+  year        = {2023}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true}
+@inproceedings{wang2023analyzing,
+  abbr        = {TMC},
+  bibtex_show = {true},
+  title       = {Analyzing Queueing Problems via Bandits with Linear Reward and Nonlinear Workload Fairness},
+  author      = {Wang, Xuchuang and Xie, Hong and Lui, John C.S.},
+  html        = {https://ieeexplore.ieee.org/document/10124349},
+  booktitle   = {The IEEE Transactions on Mobile Computing},
+  year        = {2023}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{wang2023optimizing,
+  abbr        = {PEVA},
+  bibtex_show = {true},
+  title       = {Optimizing Recommendations under Abandonment Risks: Models and Algorithms},
+  author      = {Wang, Xuchuang and Xie, Hong and Wang, Pinghui and Lui, John C.S.},
+  journal     = {Performance Evaluation},
+  html        = {https://doi.org/10.1016/j.peva.2023.102351},
+  pages       = {102351},
+  year        = {2023},
+  publisher   = {Elsevier}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{wang2023explore,
+  abbr        = {UAI},
+  bibtex_show = {true},
+  pdf         = {https://openreview.net/pdf?id=8kKEz1bnIEp},
+  slides      = {free-exp-slides.pdf},
+  title       = {Exploration for Free: How Does Reward Heterogeneity Improve Regret in Cooperative Multi-agent Bandits?},
+  author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  booktitle   = {The 39th Conference on Uncertainty in Artificial Intelligence},
+  year        = {2023},
+  selected    = {false}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{wang2023achieve,
+  abbr        = {ICLR},
+  bibtex_show = {true},
+  slides      = {tunable-communication-policy-slides.pdf},
+  pdf         = {https://openreview.net/pdf?id=QTXKTXJKIh},
+  title       = {Achieve Near-Optimal Individual Regret \&amp; Low Communications in Multi-Agent Bandits},
+  author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  booktitle   = {International Conference on Learning Representations},
+  year        = {2023},
+  selected    = {true}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{chen2023ondemand,
+  abbr        = {AISTATS},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/pdf/2302.07446.pdf},
+  title       = {On-Demand Communication for Asynchronous Multi-Agent Bandits},
+  author      = {Chen, Yu-zhen Janice and Yang, Lin and Wang, Xuchuang and Liu, Xutong and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
+  booktitle   = {The 26th International Conference on Artificial Intelligence and Statistics},
+  year        = {2023}
+}
+
+@inproceedings{wang2022multi,
+  abbr        = {IJCAI},
+  bibtex_show = {true},
+  slides      = {decentralized-sharing-bandits-slides.pdf},
+  pdf         = {https://arxiv.org/pdf/2204.13502.pdf},
+  title       = {Multi-Player Multi-Armed Bandits with Finite Shareable Resources Arms: Learning Algorithms \&amp; Applications},
+  author      = {Wang, Xuchuang and Xie, Hong and Lui, John C.S.},
+  booktitle   = {Proceedings of the 31st International Joint Conference on
+                 Artificial Intelligence, {IJCAI-22}},
+  year        = {2022}
+}
+
+@inproceedings{wang2022multiple,
+  abbr         = {ICML},
+  bibtex_show  = {true},
+  slides       = {optimal-sharing-bandits-slides.pdf},
+  pdf          = {https://arxiv.org/pdf/2206.08776.pdf},
+  title        = {Multiple-Play Stochastic Bandits with Shareable Finite-Capacity Arms},
+  author       = {Wang, Xuchuang and Xie, Hong and Lui, John C.S.},
+  booktitle    = {Proceedings of the 39th International Conference on Machine Learning},
+  pages        = {23181--23212},
+  year         = {2022},
+  organization = {PMLR},
+  selected     = {true}
 }
