--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,38 @@
 ---
 ---
+@inproceedings{wang2025link,
+  abbr        = {INFOCOM},
+  bibtex_show = {true},
+  title       = {Learning Best Paths in Quantum Networks},
+  author      = {Wang, Xuchuang and Liu, Maoli and Liu, Xutong and Li, Zhuohua and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
+  booktitle   = {Proceedings of the IEEE Conference on Computer Communications},
+  year        = {2025}
+}
+
+
+@inproceedings{liu2025combinatorial,
+  abbr        = {SIGMETRICS},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/abs/2410.17075},
+  title       = {Combinatorial Logistic Bandits},
+  author      = {Liu, Xutong and Dai, Xiangxiang and Wang, Xuchuang and Hajiesmaili, Mohammad},
+  booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
+  year        = {2025}
+}
+
+
+@inproceedings{liu2024combinatorial,
+  abbr        = {ICML},
+  bibtex_show = {true},
+  pdf         = {https://openreview.net/pdf?id=pAdI75JG3G},
+  title       = {Combinatorial Multivariant Multi-Armed Bandits with Applications to Episodic Reinforcement Learning and Beyond},
+  author      = {Liu, Xutong and Wang, Siwei and Zuo, Jinhang and Zhong, Han and Wang, Xuchuang and Wang, Zhiyong and Li, Shuai and Hajiesmaili, Mohammad and Lui, John CS and Chen, Wei},
+  booktitle   = {Forty-first International Conference on Machine Learning},
+  year        = {2024}
+}
+
+
+
 @inproceedings{liu2024link,
   abbr        = {INFOCOM},
   bibtex_show = {true},
