--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@inproceedings{liu2025combinatorial,
+  abbr        = {SIGMETRICS},
+  bibtex_show = {true},
+  title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
+  author      = {Wang, Xuchuang* and Chen, Yu-zhen Janice* and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
+  year        = {2025}
+}
+
 @inproceedings{wang2025link,
   abbr        = {INFOCOM},
   bibtex_show = {true},
@@ -8,6 +17,27 @@
   booktitle   = {Proceedings of the IEEE Conference on Computer Communications},
   year        = {2025}
 }
+
+@inproceedings{wang2025best,
+  abbr        = {AAAI},
+  bibtex_show = {true},
+  title       = {Best Arm Identification with Quantum Oracles},
+  author      = {Wang, Xuchuang and Chen, Yu-zhen Janice and Guedes de Andrade, Matheus and Allcock, Jonathan and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
+  booktitle   = {The 39th Annual AAAI Conference on Artificial Intelligence},
+  year        = {2025}
+}
+
+@inproceedings{wang2025best,
+  abbr        = {AAAI},
+  bibtex_show = {true},
+  title       = {Heterogeneous Multi-Agent Bandits with Parsimonious Hints},
+  author      = {Mirfakhar, Amirmahdi and Wang, Xuchuang and Zuo, Jinhang and Zick, Yair and Hajiesmaili, Mohammad},
+  booktitle   = {The 39th Annual AAAI Conference on Artificial Intelligence},
+  year        = {2025}
+}
+
+
+
 
 
 @inproceedings{liu2025combinatorial,
