--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
   abbr        = {SIGMETRICS},
   bibtex_show = {true},
   title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
-  author      = {Wang, Xuchuang* and Chen, Yu-zhen Janice* and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  author      = {Wang,* Xuchuang and Chen,* Yu-zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
   year        = {2025}
 }
