--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,17 @@
 ---
 ---
-@inproceedings{liu2025combinatorial,
+@inproceedings{wang2025asynchronous,
+  selected    = {true},
   abbr        = {SIGMETRICS},
   bibtex_show = {true},
   title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
-  author      = {Wang,* Xuchuang and Chen,* Yu-zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  author      = {Wang,* Xuchuang and Chen,* Yu-Zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
   year        = {2025}
 }
 
-@inproceedings{wang2025link,
+@inproceedings{wang2025learn,
+  selected    = {true},
   abbr        = {INFOCOM},
   bibtex_show = {true},
   title       = {Learning Best Paths in Quantum Networks},
@@ -22,7 +24,7 @@
   abbr        = {AAAI},
   bibtex_show = {true},
   title       = {Best Arm Identification with Quantum Oracles},
-  author      = {Wang, Xuchuang and Chen, Yu-zhen Janice and Guedes de Andrade, Matheus and Allcock, Jonathan and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
+  author      = {Wang, Xuchuang and Chen, Yu-Zhen Janice and Guedes de Andrade, Matheus and Allcock, Jonathan and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
   booktitle   = {The 39th Annual AAAI Conference on Artificial Intelligence},
   year        = {2025}
 }
@@ -112,7 +114,7 @@
   pdf         = {https://openreview.net/pdf?id=8kKEz1bnIEp},
   slides      = {free-exp-slides.pdf},
   title       = {Exploration for Free: How Does Reward Heterogeneity Improve Regret in Cooperative Multi-agent Bandits?},
-  author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-Zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {The 39th Conference on Uncertainty in Artificial Intelligence},
   year        = {2023},
   selected    = {false}
@@ -124,7 +126,7 @@
   slides      = {tunable-communication-policy-slides.pdf},
   pdf         = {https://openreview.net/pdf?id=QTXKTXJKIh},
   title       = {Achieve Near-Optimal Individual Regret \&amp; Low Communications in Multi-Agent Bandits},
-  author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-Zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {International Conference on Learning Representations},
   year        = {2023},
   selected    = {true}
@@ -135,7 +137,7 @@
   bibtex_show = {true},
   pdf         = {https://arxiv.org/pdf/2302.07446.pdf},
   title       = {On-Demand Communication for Asynchronous Multi-Agent Bandits},
-  author      = {Chen, Yu-zhen Janice and Yang, Lin and Wang, Xuchuang and Liu, Xutong and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
+  author      = {Chen, Yu-Zhen Janice and Yang, Lin and Wang, Xuchuang and Liu, Xutong and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
   booktitle   = {The 26th International Conference on Artificial Intelligence and Statistics},
   year        = {2023}
 }
