--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,6 @@
 }
 
 @inproceedings{wang2025learn,
-  selected    = {true},
   abbr        = {INFOCOM},
   bibtex_show = {true},
   title       = {Learning Best Paths in Quantum Networks},
@@ -21,6 +20,7 @@
 }
 
 @inproceedings{wang2025best,
+  selected    = {true},
   abbr        = {AAAI},
   bibtex_show = {true},
   title       = {Best Arm Identification with Quantum Oracles},
@@ -29,7 +29,7 @@
   year        = {2025}
 }
 
-@inproceedings{wang2025best,
+@inproceedings{mirfakhar2025heterogeneous,
   abbr        = {AAAI},
   bibtex_show = {true},
   title       = {Heterogeneous Multi-Agent Bandits with Parsimonious Hints},
