--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,17 @@
   abbr        = {SIGMETRICS},
   bibtex_show = {true},
   title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
-  author      = {Wang,* Xuchuang and Chen,* Yu-Zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  author      = {Wang*, Xuchuang and Chen*, Yu-Zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
+  booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
+  year        = {2025}
+}
+
+@inproceedings{liu2025combinatorial,
+  abbr        = {SIGMETRICS},
+  bibtex_show = {true},
+  pdf         = {https://arxiv.org/abs/2410.17075},
+  title       = {Combinatorial Logistic Bandits},
+  author      = {Liu, Xutong and Dai, Xiangxiang and Wang, Xuchuang and Hajiesmaili, Mohammad},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
   year        = {2025}
 }
@@ -42,15 +52,7 @@
 
 
 
-@inproceedings{liu2025combinatorial,
-  abbr        = {SIGMETRICS},
-  bibtex_show = {true},
-  pdf         = {https://arxiv.org/abs/2410.17075},
-  title       = {Combinatorial Logistic Bandits},
-  author      = {Liu, Xutong and Dai, Xiangxiang and Wang, Xuchuang and Hajiesmaili, Mohammad},
-  booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
-  year        = {2025}
-}
+
 
 
 @inproceedings{liu2024combinatorial,
