--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   bibtex_show = {true},
   pdf         = {https://arxiv.org/abs/2410.17075},
   title       = {Combinatorial Logistic Bandits},
-  author      = {Liu, Xutong and Dai, Xiangxiang and Wang, Xuchuang and Hajiesmaili, Mohammad},
+  author      = {Liu, Xutong and Dai, Xiangxiang and Wang, Xuchuang and Hajiesmaili, Mohammad and Lui, John C.S.},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
   year        = {2025}
 }
