--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,17 @@
 ---
 ---
+@inproceedings{wang2025achieve,
+  abbr        = {ICLR},
+  bibtex_show = {true},
+  pdf         = {https://openreview.net/pdf?id=vOFx8HDcvF},
+  title       = {Stochastic Bandits Robust to Adversarial Attacks},
+  author      = {Wang, Xuchuang and Liu, Maoli and Zuo, Jinhang and Liu, Xutong and Lui, John C.S. and Hajiesmaili, Mohammad},
+  booktitle   = {International Conference on Learning Representations},
+  year        = {2025},
+  selected    = {true}
+}
+
+
 @inproceedings{wang2025asynchronous,
   selected    = {true},
   abbr        = {SIGMETRICS},
@@ -125,7 +137,7 @@
   author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-Zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {International Conference on Learning Representations},
   year        = {2023},
-  selected    = {true}
+  selected    = {false}
 }
 
 @inproceedings{chen2023ondemand,
