--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@inproceedings{wang2025achieve,
+@inproceedings{wang2025robust,
   abbr        = {ICLR},
   bibtex_show = {true},
   pdf         = {https://openreview.net/pdf?id=vOFx8HDcvF},
