--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+@inproceedings{ghaffari2024multi,
+  abbr     = {L4DC},
+  bibtex_show = {true},
+  title={Multi-Agent Stochastic Bandits Robust to Adversarial Corruptions},
+  author={Ghaffari, Fatemeh and Wang, Xuchuang and Zuo, Jinhang and Hajiesmaili, Mohammad},
+  booktitle   = {7th Annual Learning for Dynamics \& Control Conference},
+  year        = {2025},
+}
+
+
 @inproceedings{wang2025robust,
   abbr        = {ICLR},
   bibtex_show = {true},
@@ -133,7 +143,7 @@
   bibtex_show = {true},
   slides      = {tunable-communication-policy-slides.pdf},
   pdf         = {https://openreview.net/pdf?id=QTXKTXJKIh},
-  title       = {Achieve Near-Optimal Individual Regret \&amp; Low Communications in Multi-Agent Bandits},
+  title       = {Achieve Near-Optimal Individual Regret \& Low Communications in Multi-Agent Bandits},
   author      = {Wang, Xuchuang and Yang, Lin and Chen, Yu-Zhen Janice and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {International Conference on Learning Representations},
   year        = {2023},
@@ -155,7 +165,7 @@
   bibtex_show = {true},
   slides      = {decentralized-sharing-bandits-slides.pdf},
   pdf         = {https://arxiv.org/pdf/2204.13502.pdf},
-  title       = {Multi-Player Multi-Armed Bandits with Finite Shareable Resources Arms: Learning Algorithms \&amp; Applications},
+  title       = {Multi-Player Multi-Armed Bandits with Finite Shareable Resources Arms: Learning Algorithms \& Applications},
   author      = {Wang, Xuchuang and Xie, Hong and Lui, John C.S.},
   booktitle   = {Proceedings of the 31st International Joint Conference on
                  Artificial Intelligence, {IJCAI-22}},
