--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,34 @@
 ---
 ---
-@inproceedings{ghaffari2024multi,
-  abbr     = {L4DC},
+@inproceedings{wang2025fusing,
+  abbr        = {ICML},
   bibtex_show = {true},
-  title={Multi-Agent Stochastic Bandits Robust to Adversarial Corruptions},
-  author={Ghaffari, Fatemeh and Wang, Xuchuang and Zuo, Jinhang and Hajiesmaili, Mohammad},
-  booktitle   = {7th Annual Learning for Dynamics \& Control Conference},
+  pdf         = {https://arxiv.org/pdf/2504.15812},
+  title       = {Fusing Reward and Dueling Feedback in Stochastic Bandits},
+  author      = {Wang, Xuchuang and Zeng, Qirun and Zuo, Jinhang and Liu, Xutong and Hajiesmaili, Mohammad and Lui, John C.S. and Wierman, Adam},
+  booktitle   = {Forty-second International Conference on Machine Learning},
   year        = {2025},
+  selected    = {true}
+}
+
+@inproceedings{zhang2025optimal,
+  abbr        = {UAI},
+  bibtex_show = {true},
+  title       = {Optimal Regret Bounds for Federated Multi-armed Bandits with Fully Distributed Communication},
+  author      = {Zhang, Haoran and Wang, Xuchuang and Chen, Hao-Xu and Qiu, Hao and Yang, Lin and Gao, Yang},
+  booktitle   = {The 41th Conference on Uncertainty in Artificial Intelligence},
+  year        = {2025},
+  selected    = {false}
+}
+
+
+@inproceedings{ghaffari2024multi,
+  abbr        = {L4DC},
+  bibtex_show = {true},
+  title       = {Multi-Agent Stochastic Bandits Robust to Adversarial Corruptions},
+  author      = {Ghaffari, Fatemeh and Wang, Xuchuang and Zuo, Jinhang and Hajiesmaili, Mohammad},
+  booktitle   = {7th Annual Learning for Dynamics \& Control Conference},
+  year        = {2025}
 }
 
 
@@ -182,6 +204,5 @@
   booktitle    = {Proceedings of the 39th International Conference on Machine Learning},
   pages        = {23181--23212},
   year         = {2022},
-  organization = {PMLR},
-  selected     = {true}
+  organization = {PMLR}
 }
