--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 @inproceedings{wang2025fusing,
   abbr        = {ICML},
   bibtex_show = {true},
-  pdf         = {https://arxiv.org/pdf/2504.15812},
+  pdf         = {https://openreview.net/pdf?id=mqljEW2NQl},
   title       = {Fusing Reward and Dueling Feedback in Stochastic Bandits},
   author      = {Wang, Xuchuang and Zeng, Qirun and Zuo, Jinhang and Liu, Xutong and Hajiesmaili, Mohammad and Lui, John C.S. and Wierman, Adam},
   booktitle   = {Forty-second International Conference on Machine Learning},
@@ -48,6 +48,8 @@
   selected    = {true},
   abbr        = {SIGMETRICS},
   bibtex_show = {true},
+  pdf         = {https://dl.acm.org/doi/10.1145/3711696},
+  slides      = {Asynchronous-MA2B-SIGMETRICS-slides.pdf},
   title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
   author      = {Wang*, Xuchuang and Chen*, Yu-Zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
@@ -68,6 +70,7 @@
   selected    = {true},
   abbr        = {AAAI},
   bibtex_show = {true},
+  pdf         = {https://ojs.aaai.org/index.php/AAAI/article/view/35432},
   title       = {Best Arm Identification with Quantum Oracles},
   author      = {Wang, Xuchuang and Chen, Yu-Zhen Janice and Guedes de Andrade, Matheus and Allcock, Jonathan and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
   booktitle   = {The 39th Annual AAAI Conference on Artificial Intelligence},
@@ -86,6 +89,7 @@
 @inproceedings{wang2025learn,
   abbr        = {INFOCOM},
   bibtex_show = {true},
+  pdf         = {https://www.arxiv.org/pdf/2506.12462},
   title       = {Learning Best Paths in Quantum Networks},
   author      = {Wang, Xuchuang and Liu, Maoli and Liu, Xutong and Li, Zhuohua and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
   booktitle   = {Proceedings of the IEEE Conference on Computer Communications},
