--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
 @inproceedings{zhang2025optimal,
   abbr        = {UAI},
   bibtex_show = {true},
+  pdf         = {https://openreview.net/pdf?id=CaIlqE8AKU},
   title       = {Optimal Regret Bounds for Federated Multi-armed Bandits with Fully Distributed Communication},
   author      = {Zhang, Haoran and Wang, Xuchuang and Chen, Hao-Xu and Qiu, Hao and Yang, Lin and Gao, Yang},
   booktitle   = {The 41th Conference on Uncertainty in Artificial Intelligence},
@@ -25,6 +26,8 @@
 @inproceedings{ghaffari2024multi,
   abbr        = {L4DC},
   bibtex_show = {true},
+  poster      = {L4DC-Robust-MA2B-poster.pdf},
+  pdf         = {https://arxiv.org/pdf/2411.08167},
   title       = {Multi-Agent Stochastic Bandits Robust to Adversarial Corruptions},
   author      = {Ghaffari, Fatemeh and Wang, Xuchuang and Zuo, Jinhang and Hajiesmaili, Mohammad},
   booktitle   = {7th Annual Learning for Dynamics \& Control Conference},
@@ -36,6 +39,7 @@
   abbr        = {ICLR},
   bibtex_show = {true},
   pdf         = {https://openreview.net/pdf?id=vOFx8HDcvF},
+  poster      = {robust-to-attack-poster.pdf},
   title       = {Stochastic Bandits Robust to Adversarial Attacks},
   author      = {Wang, Xuchuang and Liu, Maoli and Zuo, Jinhang and Liu, Xutong and Lui, John C.S. and Hajiesmaili, Mohammad},
   booktitle   = {International Conference on Learning Representations},
@@ -71,6 +75,7 @@
   abbr        = {AAAI},
   bibtex_show = {true},
   pdf         = {https://ojs.aaai.org/index.php/AAAI/article/view/35432},
+  poster      = {qbai-poster.pdf},
   title       = {Best Arm Identification with Quantum Oracles},
   author      = {Wang, Xuchuang and Chen, Yu-Zhen Janice and Guedes de Andrade, Matheus and Allcock, Jonathan and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
   booktitle   = {The 39th Annual AAAI Conference on Artificial Intelligence},
@@ -80,6 +85,7 @@
 @inproceedings{mirfakhar2025heterogeneous,
   abbr        = {AAAI},
   bibtex_show = {true},
+  pdf         = {https://ojs.aaai.org/index.php/AAAI/article/view/34143},
   title       = {Heterogeneous Multi-Agent Bandits with Parsimonious Hints},
   author      = {Mirfakhar, Amirmahdi and Wang, Xuchuang and Zuo, Jinhang and Zick, Yair and Hajiesmaili, Mohammad},
   booktitle   = {The 39th Annual AAAI Conference on Artificial Intelligence},
@@ -90,6 +96,7 @@
   abbr        = {INFOCOM},
   bibtex_show = {true},
   pdf         = {https://www.arxiv.org/pdf/2506.12462},
+  slides      = {BeQuP-Slides-20mins.pdf},
   title       = {Learning Best Paths in Quantum Networks},
   author      = {Wang, Xuchuang and Liu, Maoli and Liu, Xutong and Li, Zhuohua and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
   booktitle   = {Proceedings of the IEEE Conference on Computer Communications},
