--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@inproceedings{zhang2025federated,
+  abbr        = {NeurIPS},
+  bibtex_show = {true},
+  title       = {Federated Multi-armed Bandits with Efficient Bit-Level Communications},
+  author      = {Zhang, Haoran and Yang, Xu and Wang, Xuchuang and Chen, Hao-Xu and Qiu, Hao and Yang, Lin and Gao, Yang},
+  booktitle   = {Advances in Neural Information Processing Systems},
+  year        = {2025}
+}
+
 @inproceedings{wang2025fusing,
   abbr        = {ICML},
   bibtex_show = {true},
@@ -23,7 +32,7 @@
 }
 
 
-@inproceedings{ghaffari2024multi,
+@inproceedings{ghaffari2025multi,
   abbr        = {L4DC},
   bibtex_show = {true},
   poster      = {L4DC-Robust-MA2B-poster.pdf},
@@ -57,6 +66,7 @@
   title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
   author      = {Wang*, Xuchuang and Chen*, Yu-Zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
+  video       = {https://www.youtube.com/watch?v=U1z_jhs3GxQ},
   year        = {2025}
 }
 
