--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -66,7 +66,7 @@
   title       = {Asynchronous Multi-Agent Bandits: Fully Distributed vs. Leader-Coordinated Algorithms},
   author      = {Wang*, Xuchuang and Chen*, Yu-Zhen Janice and Yang, Lin and Liu, Xutong and Hajiesmaili, Mohammad and Towsley, Don and Lui, John C.S.},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
-  video       = {https://www.youtube.com/embed/v=U1z_jhs3GxQ},
+  video       = {https://www.youtube.com/watch?v=U1z_jhs3GxQ},
   year        = {2025}
 }
 
