--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+@inproceedings{xu2026asynchronous,
+  selected    = {true},
+  abbr        = {SIGMETRICS},
+  bibtex_show = {true},
+  title       = {Heterogeneous Multi-Agent Multi-Armed Bandits on Stochastic Block Models},
+  author      = {Xu, Mengfan and Xia, Liran and Ghaffari, Fatemeh and Wang, Xuchuang and Liu, Xutong and Hajiesmaili, Mohammad},
+  booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
+  year        = {2026}
+}
+
 @inproceedings{zhang2025federated,
   abbr        = {NeurIPS},
   bibtex_show = {true},
