--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,9 @@
 ---
 ---
 @inproceedings{xu2026asynchronous,
-  selected    = {true},
   abbr        = {SIGMETRICS},
   bibtex_show = {true},
+  pdf         = {https://arxiv.org/abs/2502.08003},
   title       = {Heterogeneous Multi-Agent Multi-Armed Bandits on Stochastic Block Models},
   author      = {Xu, Mengfan and Xia, Liran and Ghaffari, Fatemeh and Wang, Xuchuang and Liu, Xutong and Hajiesmaili, Mohammad},
   booktitle   = {ACM International Conference on Measurement and Modeling of Computer Systems},
