--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -94,7 +94,7 @@
   selected    = {true},
   abbr        = {AAAI},
   bibtex_show = {true},
-  pdf         = {https://ojs.aaai.org/index.php/AAAI/article/view/35432},
+  pdf         = {qbai-aaai-full-version.pdf},
   poster      = {qbai-poster.pdf},
   title       = {Best Arm Identification with Quantum Oracles},
   author      = {Wang, Xuchuang and Chen, Yu-Zhen Janice and Guedes de Andrade, Matheus and Allcock, Jonathan and Hajiesmaili, Mohammad and Lui, John C.S. and Towsley, Don},
