--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+
+@inproceedings{dai2026amulti,
+  abbr        = {AAAI},
+  bibtex_show = {true},
+  title       = {A Multi-Agent Conversational Bandit Approach to Online Evaluation and Selection of User-Aligned LLM Responses},
+  author      = {Dai, Xiangxiang and Xie, Yuejin and Liu, Maoli and Wang, Xuchuang and Li, Zhuohua and Wang, Huanyu and Lui, John C.S.},
+  booktitle   = {The 40th Annual AAAI Conference on Artificial Intelligence (AI Alignment Track)},
+  year        = {2026}
+}
+
+
 @inproceedings{xu2026asynchronous,
   abbr        = {SIGMETRICS},
   bibtex_show = {true},
