--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{liu2025combinatorial,
+  abbr        = {ToN},
+  bibtex_show = {true},
+  title       = {Combinatorial Logistic Online Learning and Its Applications in Nonlinear Networked Systems},
+  author      = {Liu, Xutong and Dai, Xiangxiang and Wang, Xuchuang and Hajiesmaili, Mohammad and Lui, John C.S.},
+  booktitle   = {IEEE/ACM Transactions on Networking},
+  year        = {2026}
+}
+
+
 @inproceedings{dai2026amulti,
   abbr        = {AAAI},
   bibtex_show = {true},
