--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
 @inproceedings{dai2026amulti,
   abbr        = {AAAI},
   bibtex_show = {true},
+  pdf         = {https://arxiv.org/abs/2501.01849},
   title       = {A Multi-Agent Conversational Bandit Approach to Online Evaluation and Selection of User-Aligned LLM Responses},
   author      = {Dai, Xiangxiang and Xie, Yuejin and Liu, Maoli and Wang, Xuchuang and Li, Zhuohua and Wang, Huanyu and Lui, John C.S.},
   booktitle   = {The 40th Annual AAAI Conference on Artificial Intelligence (AI Alignment Track)},
