--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@inproceedings{yang2026cooperative,
+  abbr        = {ToN},
+  bibtex_show = {true},
+  title       = {Cooperative Bandit Algorithms with Optimal Regret and Communication Costs},
+  author      = {Lin, Yang and Wang, Xuchuang and Chen, Haoxu and Hajiesmaili, Mohammad and Zhang, Lijun and Lui, John C.S.},
+  booktitle   = {IEEE/ACM Transactions on Networking},
+  year        = {2026}
+}
 
 @inproceedings{liu2026combinatorial,
   abbr        = {ToN},
